# rover-soft

src/sirius_bringup/: package.xml
src/sirius_bringup/config/: controllers.yaml  hardware_interfaces.yaml
src/sirius_bringup/launch/: hardware_interfaces.launch  sirius2.launch
src/sirius_calibration/: CMakeLists.txt  package.xml
src/sirius_cameras/launch/: oak_d_w.launch
src/sirius_common/sirius_control/config/: controllers.yaml
src/sirius_common/sirius_description/launch/: sirius_description.launch
src/sirius_common/sirius_description/robots/: sirius.urdf.xacro
src/sirius_common/sirius_navigation/: CMakeLists.txt  package.xml
src/sirius_common/sirius_navigation/launch/: complementary_filter.launch
src/sirius_depthai_driver/: package.xml
src/sirius_depthai_driver/launch/: sirius_depthai_driver.launch
src/sirius_depthai_driver/src/: sirius_depthai_driver.cpp
src/sirius_description/: CMakeLists.txt  README.md  package.xml
src/sirius_description/config/inertial/: gnss.yaml  oak-d-w.yaml  (+1 more)
src/sirius_description/launch/: sirius_description.launch
src/sirius_description/urdf/: sirius.urdf.xacro
src/sirius_gazebo/: README.md  package.xml
src/sirius_gazebo_plugins/: package.xml
src/sirius_gazebo_plugins/src/: sirius_gazebo_ros_gps_sensor.cpp  sirius_gazebo_ros_imu_sensor.cpp  sirius_gazebo_ros_magnetometer_sensor.cpp  sirius_gazebo_ros_p3d.cpp
src/sirius_robot/sirius_bringup/: package.xml
src/sirius_robot/sirius_odrive_driver/: CMakeLists.txt
src/sirius_robot/sirius_robot/: package.xml
src/sirius_simulator/sirius_gazebo/: package.xml
(+23 files in other folders)
